# todoconsoleproject2

./: - Copy.env  .1env.local  .gitignore  .oldenv.local  2 (2).env  2.env  CHATBOT_SETUP_GUIDE.md  Dockerfile.backend.txt  Dockerfile.frontend.txt  New Text Document.txt  README.md  add_missing_columns.py  ai.py  app - Copy (10).py  app - Copy (11).py  app - Copy (12).py  app - Copy (13).py  app - Copy (16).py  app - Copy (17).py  app - Copy (18).py  app - Copy (2).py  app - Copy (20).py  app - Copy (3).py  app - Copy (4).py  app - Copy (5).py  app - Copy (6).py  app - Copy (8).py  app - Copy (9).py  app - Copy.py  app.py  app_with_audit_trail.py  app_with_chatbot.py  appnew.py  appnew2.py  appok.py  appren.py  appv0.py  appv1.py  appv2.py  chatbotcommand.txt  (+32 more)
New folder/: Default.rdp  N.txt  New Database.odb  New Text Document (4).txt  New Text Document (5).txt  New Text Document (6).txt  New Text Document.txt  New Text Document1.txt  WebSocket.txt  a.csv  app.py  app1.txt  app13oct25v1-copy.py  app8oct25v1.py  appok.py  appstartup13oct.py  award.txt  b.csv  cal2.txt  copy.txt  deep.txt  desktop.txt  docker.txt  export_20250924_101530.csv  (+24 more)
backend/: pyproject.toml  requirements.txt
backend/src/: database.py  main.py
backend/src/agents/: todo_agent.py
backend/src/api/: chat_endpoint.py
backend/src/mcp_server/: server.py
backend/src/mcp_server/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/models/: conversation.py  message.py  task.py  user.py
backend/src/services/: conversation_service.py  task_service.py
(+221 files in other folders)
