[tool.poetry]
name = "todo-ai-chatbot-backend"
version = "0.1.0"
description = "Backend for the Todo AI Chatbot using FastAPI, OpenAI, and MCP"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = "^1.3.5"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mcp-sdk = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"